--- a/slambda-doc/docs/functions/motivate.mdx
+++ b/slambda-doc/docs/functions/motivate.mdx
@@ -1,10 +1,10 @@
 ---
-title: summarize
+title: motivate
 sidebar_position: 3
 ---
 
 import {TextFnModuleView} from "@site/src/components/TextFnTemplate"
-import FnData from "@site/src/data/summarize.json"
+import FnData from "@site/src/data/motivate.json"
 
 # summarize
 
