--- a/slambda-doc/docs/functions/motivate.mdx
+++ b/slambda-doc/docs/functions/motivate.mdx
@@ -6,7 +6,7 @@ sidebar_position: 3
 import {TextFnModuleView} from "@site/src/components/TextFnTemplate"
 import FnData from "@site/src/data/motivate.json"
 
-# summarize
+# motivate
 
 <TextFnModuleView
     module_name={FnData.module_name}
